{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 82,
  "lineage": "c56c1fcc-fbe4-c411-04e2-e18ef9dad71c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraformed_firewall_exception",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-02T18:56:44.296-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spherical-gate-338602/global/firewalls/http-8080-ingress",
            "log_config": [],
            "name": "http-8080-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/global/networks/terraformed-network",
            "priority": 1000,
            "project": "spherical-gate-338602",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/global/firewalls/http-8080-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "terraformed-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraformed_firewall_exception_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-02T18:56:44.235-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spherical-gate-338602/global/firewalls/http-22-ingress",
            "log_config": [],
            "name": "http-22-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/global/networks/terraformed-network",
            "priority": 1000,
            "project": "spherical-gate-338602",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/global/firewalls/http-22-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220302",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/zones/us-central1-a/disks/terraform-instance-9d08805f16f7254b"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/spherical-gate-338602/zones/us-central1-a/instances/terraform-instance-9d08805f16f7254b",
            "instance_id": "3842782649635410050",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "mohammedbubshait:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKglm7bXYxtKABwj2ehcUT9QTk0g2YvZmMbzR6Zs60in moham@Mohammed\r\n"
            },
            "metadata_fingerprint": "yMaeHF1jcVE=",
            "metadata_startup_script": "sudo apt-get update\r\n\r\nsudo apt install openjdk-8-jdk\r\n\r\nsudo apt-get install -y default-jre docker.io maven\r\n\r\ncurl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo tee \\\r\n    /usr/share/keyrings/jenkins-keyring.asc \u003e /dev/null\r\n\r\necho deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] \\\r\n    https://pkg.jenkins.io/debian-stable binary/ | sudo tee \\\r\n    /etc/apt/sources.list.d/jenkins.list \u003e /dev/nu [...]
            "name": "terraform-instance-9d08805f16f7254b",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.68.23.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/global/networks/terraformed-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/regions/us-central1/subnetworks/terraformed-network",
                "subnetwork_project": "spherical-gate-338602"
              }
            ],
            "project": "spherical-gate-338602",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/zones/us-central1-a/instances/terraform-instance-9d08805f16f7254b",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "terraformed-instance"
            ],
            "tags_fingerprint": "pBA_FA_Riu8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/spherical-gate-338602/global/networks/terraformed-network",
            "mtu": 0,
            "name": "terraformed-network",
            "project": "spherical-gate-338602",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spherical-gate-338602/global/networks/terraformed-network"
          }
        }
      ]
    }
  ]
}